Fix restoration of horizontal scroll state.  Bug 226534, r+sr=roc